projects/gateway2/translator/testutils/inputs/route-sort.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: infra
spec:
  gatewayClassName: gloo-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-1
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /a
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /a/1
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: RegularExpression
        value: /a/.*
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: RegularExpression
        value: /b/c/.*
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: Exact
        value: /a/1
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: Exact
        value: /a/1/2
    backendRefs:
    - name: example-svc
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-2
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /x
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /x/1
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: RegularExpression
        value: /x/.*
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: RegularExpression
        value: /x/y/.*
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: Exact
        value: /x/1
    backendRefs:
    - name: example-svc
      port: 80
  - matches:
    - path:
        type: Exact
        value: /x/1/2
    backendRefs:
    - name: example-svc
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  namespace: infra
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
